--- a/src/components/CommentsSection.astro
+++ b/src/components/CommentsSection.astro
@@ -61,6 +61,7 @@ import Layout from "../layouts/Layout.astro";
         El.style.boxShadow = `1px 1px 10px 0px rgba(0, 0, 0, 0.2)`;
         El.style.wordBreak = "break-word"; // Asegura que las palabras largas se rompan si es necesario
         El.style.overflowWrap = "break-word";
+        El.style.backdropFilter = "blur(10px)"
       });
 
       const h3 = commentsSection.querySelectorAll("h3");
