--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,8 @@ import { ViewTransitions } from "astro:transitions";
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body>
+  <body class="background">
+    <div class="background"></div>
     <slot />
   </body>
 </html>
@@ -101,5 +102,14 @@ import { ViewTransitions } from "astro:transitions";
       Courier New,
       monospace;
   }
+
+  .background {
+
+  background-color: var(--background-color);
+  background-image: 
+    linear-gradient(to right, #f0f0f0 1px, transparent 1px),
+    linear-gradient(to bottom, #f0f0f0 1px, transparent 1px);
+  background-size: 6rem 4rem;
+}
 
 </style>
