--- a/src/components/UploadProgram.astro
+++ b/src/components/UploadProgram.astro
@@ -198,6 +198,7 @@ import Layout from "../layouts/Layout.astro";
     transition: box-shadow 0.3s ease;
     text-decoration: none;
     backdrop-filter: blur(10px);
+    z-index: 1;
 
     &:hover {
       box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
