Primer javascript cambiando con el backend

--- a/src/components/FeaturedPrograms.astro
+++ b/src/components/FeaturedPrograms.astro
@@ -15,7 +15,7 @@ import SearchBtn from "./Search-btn.astro";
   </article>
 </article>
 
-<script type="module">
+<!-- <script type="module">
   import { neon } from "https://cdn.skypack.dev/@neondatabase/serverless";
 
   const sql = neon(
@@ -195,7 +195,7 @@ import SearchBtn from "./Search-btn.astro";
       span.style.overflowWrap = "break-word";
     });
   }
-</script>
+</script> -->
 
 <style>
   header {
