--- a/src/components/NavTables.astro
+++ b/src/components/NavTables.astro
@@ -18,11 +18,19 @@
 
   // Agregar evento para cuando se presione enter en el input para buscar
   async function LoadPrograms() {
-    const response = await sql`SELECT * FROM programas
-ORDER BY nombre ASC`;
+  try {
+    // Realizar una solicitud al backend
+    const response = await fetch("https://backend-soft-share-g36lx1d8l-nachos-projects-077bc528.vercel.app/get");
 
-    // Actualiza el contenido del contenedor con los nuevos programas
-    document.getElementById("programList").innerHTML = response
+    if (!response.ok) {
+      throw new Error("Error al obtener los programas");
+    }
+
+    // Parsear la respuesta JSON
+    const programs = await response.json();
+
+    // Actualizar el contenido del contenedor con los nuevos programas
+    document.getElementById("programList").innerHTML = programs
       .map(
         (programa) => `
           <div class="div-container">
@@ -45,7 +53,11 @@ ORDER BY nombre ASC`;
       .join("");
 
     makeStyles();
+  } catch (error) {
+    console.error("Error al cargar los programas:", error);
   }
+}
+
   // Observar el ancho de la pantalla para hacer un diseño responsive
   function makeStyles() {
     window.addEventListener("resize", responsive);
