Página en mantenimiento...

--- a/src/components/CommentsSection.astro
+++ b/src/components/CommentsSection.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro";
     color: #0000ff40;
   } */
 </style>
-<!-- <script type="module">
+<script type="module">
   import { neon } from "https://cdn.skypack.dev/@neondatabase/serverless";
 
   loadComments();
@@ -92,7 +92,7 @@ import Layout from "../layouts/Layout.astro";
       });
     }
   }
-</script> -->
+</script>
 
 <style>
   h2 {
