--- a/src/components/FeedBack.astro
+++ b/src/components/FeedBack.astro
@@ -36,7 +36,7 @@ import Layout from "../layouts/Layout.astro";
   </main>
 </Layout>
 
-<!-- <script type="module">
+<script type="module">
   import { neon } from "https://cdn.skypack.dev/@neondatabase/serverless";
 
   const sql = neon(
@@ -171,7 +171,7 @@ import Layout from "../layouts/Layout.astro";
       });
     }
   }
-</script> -->
+</script>
 <style>
   main {
     display: flex;
