--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,12 @@ import FeedBack from "../components/FeedBack.astro";
 ---
 
 <Layout title="Soft-Share">
-  <Alert />
-  <SuccessAlert />
-  <main>
-    <h1>Soft-Share</h1>
+  <div>
+    <h1>Lo siento!!</h1>
+    <p>Por el momento la página está en mantenimiento, agradezco tu paciencia.</p>
+    <span>👷⚒️</span>
+  </div>
+    <!-- <h1>Soft-Share</h1>
     <p class="presentation">
       Encuentra una variedad de herramientas informáticas, desde aplicaciones
       completas hasta scripts útiles. <font color="008f39">Comparte</font> tus propios
@@ -29,10 +31,28 @@ import FeedBack from "../components/FeedBack.astro";
     <FeaturedPrograms />
     <UploadProgram />
     <FeedBack />
-    <CommentsSection />
+    <CommentsSection /> -->
   </main>
 
   <style>
+    /* mantemiento */
+
+
+    div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-top: 200px;
+    }
+
+    span {
+      font-size: 9rem;
+    }
+
+
+
+
     body {
       padding-bottom: 100px;
     }
