--- a/src/components/CommentsSection.astro
+++ b/src/components/CommentsSection.astro
@@ -18,17 +18,23 @@ import Layout from "../layouts/Layout.astro";
     color: #0000ff40;
   } */
 </style>
-<script type="module">
-  import { neon } from "https://cdn.skypack.dev/@neondatabase/serverless";
+<script>
 
+  // Cargar los comentarios cuando la página carga
   loadComments();
   async function loadComments() {
-    const sql = neon(
-      "postgresql://Programs-db_owner:gt7QxJLNI4rP@ep-shrill-brook-a5j8odhx.us-east-2.aws.neon.tech/Programs-db?sslmode=require"
-    );
-    const response =
-      await sql`Select autor, comentario, fecha from comentarios order by id desc`;
-    document.getElementById("commentsSection").innerHTML = response
+
+
+    const response = await fetch('http://localhost:1234/comments')
+    
+    if (!response.ok) {
+      throw new Error("Error al obtener los programas");
+    }
+
+    // Parsear la respuesta JSON
+    const programs = await response.json();
+
+    document.getElementById("commentsSection").innerHTML = programs
       .map(
         (comentario) => `
           <article>
