--- a/src/components/CommentsSection.astro
+++ b/src/components/CommentsSection.astro
@@ -25,7 +25,7 @@ import Layout from "../layouts/Layout.astro";
   async function loadComments() {
 
 
-    const response = await fetch('http://localhost:1234/comments')
+    const response = await fetch('https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments')
     
     if (!response.ok) {
       throw new Error("Error al obtener los programas");
