--- a/src/components/FeaturedPrograms.astro
+++ b/src/components/FeaturedPrograms.astro
@@ -39,7 +39,7 @@ import SearchBtn from "./Search-btn.astro";
       return;
     }
 
-    const response = await fetch("http://localhost:1234/search", {
+    const response = await fetch("https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/search", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
@@ -112,7 +112,7 @@ import SearchBtn from "./Search-btn.astro";
   async function LoadPrograms() {
   try {
     // Realizar una solicitud al backend
-    const response = await fetch("http://localhost:1234/get");
+    const response = await fetch("https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/get");
 
     if (!response.ok) {
       throw new Error("Error al obtener los programas");
