--- a/src/components/NavButtons.astro
+++ b/src/components/NavButtons.astro
@@ -14,7 +14,7 @@
   async function LoadPrograms() {
   try {
     // Realizar una solicitud al backend
-    const response = await fetch("http://localhost:1234/get");
+    const response = await fetch("https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/get");
 
     if (!response.ok) {
       throw new Error("Error al obtener los programas");
