--- a/src/components/NewComment.astro
+++ b/src/components/NewComment.astro
@@ -55,7 +55,7 @@ import Layout from "../layouts/Layout.astro";
         return;
       }
 
-      const response = await fetch("http://localhost:1234/comments", {
+      const response = await fetch("https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
@@ -107,7 +107,7 @@ import Layout from "../layouts/Layout.astro";
   async function loadComments() {
 
 
-    const response = await fetch('http://localhost:1234/comments')
+    const response = await fetch('https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments')
     
     if (!response.ok) {
       throw new Error("Error al obtener los programas");
