Update de titulo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 import FeaturedPrograms from "../components/FeaturedPrograms.astro";
 import UploadProgram from "../components/UploadProgram.astro";
-import Alert from "../components/Alert.astro";
-import SuccessAlert from "../components/SuccessAlert.astro";
+// import Alert from "../components/Alert.astro";
+// import SuccessAlert from "../components/SuccessAlert.astro";
 import CommentsSection from "../components/CommentsSection.astro";
 import FeedBack from "../components/NewComment.astro";
 import NavButtons from "../components/NavButtons.astro";
 ---
 
-<Layout title="Soft-Share">
+<Layout title="Soft-Share - Repositorio de tus Programas">
   <main>
     <h1>Soft-Share</h1>
     <p class="presentation">
@@ -28,6 +28,8 @@ import NavButtons from "../components/NavButtons.astro";
     <UploadProgram />
     <FeedBack />
     <CommentsSection />
+    <!-- <Alert />
+    <SuccessAlert /> -->
   </main>
 
   <style>
