Primeros estilos con tailwind

--- a/src/components/CommentsSection.astro
+++ b/src/components/CommentsSection.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Sección de Comentarios">
   <main>
-    <h2>Comentarios📖</h2>
+    <h2 class="font-bold">Comentarios 📖</h2>
     <section id="commentsSection">
       <article>
         <p></p>
