--- a/src/components/Search-btn.astro
+++ b/src/components/Search-btn.astro
@@ -1,5 +1,5 @@
 <div class="container">
-  <input type="text" placeholder="" id="input" class="widthInput" />
+  <input type="text" placeholder="" id="input" class="widthInput max-w-[80%]" />
   <div class="btn" id="btn">
     <img src="search.svg" id="imgS" alt="Imagen de binoculares" />
   </div>
