--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,8 @@ import NavButtons from "../components/NavButtons.astro";
 
 <Layout title="Soft-Share - Repositorio de tus Programas">
   <main>
-    <h1 class="font-bold mb-0 pb-0">Soft-Share</h1>
-    <p class="presentation leading-6 mt-0 pt-0">
+    <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl">Soft-Share</h1>
+    <p class="presentation  leading-6 mt-2 pt-0 text-sm lg:text-[19px]" style="line-height: 1.5rem">
       Encuentra una variedad de herramientas informáticas, desde aplicaciones
       completas hasta scripts útiles. <font color="008f39">Comparte</font> tus propios
       programas con la comunidad y vota por los mejores. Aprovecha una plataforma
