--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import NavButtons from "../components/NavButtons.astro";
 ---
 
 <Layout title="Soft-Share - Repositorio de tus Programas">
-  <main>
+  <main class="w-11/12 lg:w-9/12">
     <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl">Soft-Share</h1>
     <p class="presentation  leading-6 mt-2 pt-0 text-sm lg:text-[19px]" style="line-height: 1.5rem">
       Encuentra una variedad de herramientas informáticas, desde aplicaciones
@@ -38,7 +38,6 @@ import NavButtons from "../components/NavButtons.astro";
     }
 
     main {
-      width: 70%;
       display: flex;
       flex-direction: column;
     }
